k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata: 
      labels:
        app: go-app
    spec:
      containers:
        - name: goapp 
          image: anandsa18/go-appln1:v1
          ports:
            - containerPort: 8080
