k8s/Service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: go-service

spec:
  selector:
    app: go-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
