k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: go-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: go-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
